--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Freedom</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <meta name="viewport" content="width=device-width initial-scale=1">
+  
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text%7CJulius+Sans+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">
+  
+  <title>Freedom</title>
 </head>
 <body>
+
   <div class="wrapper">
-    <p id="quote">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
-    <p id="author">– Jean-Jacques Rousseau</p>
+    <p class="quote">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="author"><small>– Jean-Jacques Rousseau</small></p>
   </div>
+    
 </body>
 </html>
